# pm-mentions-concise

./: .gitignore  PM_STRATEGY_REPORT.md  README.md  backtest.py  backtest_report.md  base_rates.json  bot.py  focused_backtest.py  focused_backtest_report.md  focused_strategy.py  optimized_strategy_report.md  pm_backtest.py  pm_backtest_report.md  pm_base_rates.py  pm_data_collector.py  pm_focused_strategy.py  pm_mentions_strategy.py  pm_trade_fetcher.py  pm_transcript_rates.py  pm_vwap_backtest.py  pm_vwap_backtest_report.md  polymarket_client.py  pyproject.toml  shared.py  strategy_report.md  strategy_writeup.md  tests.py
.github/workflows/: ci.yml
data/: pm_calibration.json  pm_transcript_rates.json
