[project]
name = "pm-mentions-concise"
version = "0.1.0"
description = "Polymarket mention-market trading bot with calibrated base rates"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31,<3",
    "numpy>=1.26,<2",
    "py_clob_client>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9",
]

[project.scripts]
pm-bot = "bot:main"
